# gemini-srt-translator

./: .gitignore  README.md  _pr_description  config.py  listmodels.py  pyproject.toml  requirements.txt  setup.py  subtitle-translator-gui.pyw  subtitle_translator_gui.py  translator.py
.github/: FUNDING.yml
gemini_srt_translator/: __init__.py  audio_extractor.py  cli.py  ffmpeg_utils.py  helpers.py  logger.py  main.py  pricing.json  utils.py  webapi_client.py
tests/: batch_translate.py  test_batch_translate.py  test_ffmpeg_utils.py  test_interrupted_translation.py  test_listmodels.py  test_translate.py  test_translate_alloptions.py  test_translate_alloptions_draganddrop.py
