[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-srt-translator"
version = "2.2.0a1"
description = "A tool for translating subtitles using Google Gemini AI"
readme = "README.md"
license = "MIT"
authors = [{ name = "Matheus Castro" }]
dependencies = [
  "google-genai==1.19.0",
  "srt==3.5.3",
  "json-repair==0.46.2",
  "packaging==25.0",
  "pydub>=0.25.1",
  "audioop-lts==0.2.1; python_version>='3.13'",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

[project.scripts]
gemini-srt-translator = "gemini_srt_translator.cli:main"
gst = "gemini_srt_translator.cli:main"
